--- a/projects/elements/src/json-viewer/json-viewer.css
+++ b/projects/elements/src/json-viewer/json-viewer.css
@@ -18,7 +18,7 @@ nve-json-node {
 }
 
 nve-json-node:first-of-type {
-  margin-top: var(--nve-ref-space-md) !important;
+  margin-block-start: var(--nve-ref-space-md) !important;
 }
 
 .array::before,
